--- a/html/test3.html
+++ b/html/test3.html
@@ -52,12 +52,14 @@
     <h1>큐(Queue)를 사용하는 예제</h1>
     <button>큐(Queue)비우기</button>
     <p>==================================</p>
-    <img src="images/car_green.jpg" alt=""> <br>
-    <img src="images/car_red.jpg" alt="">
-    <img src="images/car_green.jpg" alt="">
+    <img src="images/smile_junsuck.png" alt=""> <br>
+    <img src="images/smile_junsuck.png" alt="">
+    <img src="images/smile_junsuck.png" alt="">
 
 
 
     
 </body>
+
+
 </html>
