--- a/html/test3.html
+++ b/html/test3.html
@@ -49,7 +49,7 @@
 
 </head>
 <body>
-    <h1>큐(Queue)를 사용하는 예제</h1>
+    <h1>큐(Queue)를 사용하는 준석이</h1>
     <button>큐(Queue)비우기</button>
     <p>==================================</p>
     <img src="images/smile_junsuck.png" alt=""> <br>
