--- a/html/test3.html
+++ b/html/test3.html
@@ -50,6 +50,7 @@
 </head>
 <body>
     <h1>큐(Queue)를 사용하는 준석이</h1>
+    <h2>사진을 눌러보삼</h2>
     <button>큐(Queue)비우기</button>
     <p>==================================</p>
     <img src="images/smile_junsuck.png" alt=""> <br>
