--- a/html/smile_guni.html
+++ b/html/smile_guni.html
@@ -49,7 +49,7 @@
 
 </head>
 <body>
-    <h1>큐(Queue)를 사용하는 창그니</h1>
+    <h1>큐(Queue)를 사용하는 건이</h1>
     <h2>사진을 눌러보삼</h2>
     <button>큐(Queue)비우기</button>
     <p>==================================</p>
