--- a/html/basic2.html
+++ b/html/basic2.html
@@ -12,6 +12,7 @@
     <p>오늘 저녁은 닭볶음탕~!</p>
     <hr>
     <blockquote>아 <b>애월</b> 좋았는데 또 가고싶다~(출처 : 황토문화전자대창)</blockquote>
+    <!-- blockquote : 인용문 -->
     <p><strong>제주도 가서 뭐햇는지 </strong> <em>너무 옜날이라 </em>기억이 잘 안나네</p>
     <pre>이 태그는 사용을 권장하지 않습니다.
               이유는 조금 후에 ...
