--- a/html/form.html
+++ b/html/form.html
@@ -13,16 +13,27 @@
         <p>
             
         <label for="id">아이디</label>
-        <input type="text" name="id" id="id">
+        <input type="text" name="id" id="id" size="10" maxlength="8" autofocus required>
+        <!-- size : 칸의 크기
+            maxlength : 안에 적어넣을 수있는 글의 크기
+            autofocus : 실행하자마자 포커스가 가있다. 
+            required : 필수 작성해야하는 항목 *다는 느낌-->
         </p>
 
         <label for="pass">비밀번호</label>
-        <input type="password" name="pw" id="pass">
+        <input type="password" name="pw" id="pass" size="100" required>
         <!-- 
             name 은 변수로서의 이름
             id는 홈태그를 좀더 이쁘게 꾸미는 용도 무슨말이지..?
 
          -->
+         <br>
+         <input type="image" src="images/로구인.png" alt="로그인" width="100">
+
+         <input type="hidden" name="mode" value="서버로 넘길 값">
+         <!-- 예를 들어 회원가입할때 아이디 중복확인하는 역할처럼 중간에 서버에
+            정보를 넘겨주거나 할때 사용한다. -->
+         
 
         <p>
             <input type="submit" value="로그인">
@@ -41,12 +52,40 @@
 
      -->
 
-     <form action="">
+     <form action="login.jsp" method="post">
+         <input type="text" value="honggd" readonly="false">
+         <!-- readonly : 읽기만가능 후에 수정이 불가능하다. -->
         <h2>방과후 특별 활동 선택</h2>
-        <input type="checkbox" id="writing"><label for="writing">서예</label>
-        <input type="checkbox" id="soccer"><label for="soccer">축구</label>
-        <input type="checkbox">수영
-        <input type="checkbox">탁구
+        <input type="checkbox" id="writing" name="wri"><label for="writing">서예</label>
+        <input type="checkbox" id="soccer" name="soc"><label for="soccer">축구</label>
+        <input type="checkbox" id="swim" name="swi"><label for="swim">수영</label>
+        <input type="checkbox" id="pingpong" name="pin"><label for="pingpong">탁구</label>
+        <!-- label 달아서 글씨 눌러도 체크 가능 -->
+        <!-- checkbos는 name값에 true false값이 들어간다 이거는 -->
+
+        <h2>방과후 수업 선택(1과목만 선택)</h2>
+        <input type="radio" id="math" name="subject" value="math"><label for="math">수학</label>
+        <input type="radio" id="eng" name="subject" value="eng"><label for="eng">영여</label>
+        <input type="radio" id="si" name="subject" value="si"><label for="si">과학</label>
+        <!-- value의 역할 : subject라는 변수안에 value값을 전해준다.  -->
+
+        <fieldset>
+            <legend>추가 개인정보</legend>
+            <p>
+                <label>전화번호</label>
+                <input type="tel" name="phone" placeholder="하이픈(-)을 입력x">
+                <!-- placeholder : 추가 설명 -->
+                <input type="number">
+            </p>
+            <p>
+                <label>이메일</label>
+                <input type="email" name="email">
+            </p>
+            <!-- <input type="submit" value="회원가입"> -->
+            <input type="button" value="회원가입">
+            <input type="reset" value="다시입력">
+        </fieldset>
+
 
 
 
