--- a/html/smile_jin.html
+++ b/html/smile_jin.html
@@ -19,12 +19,7 @@
         .delay div  {
             width: 100px;
             height: 90px;
-            background: #eee;
             margin-bottom: 20px;
-            font-size: 0.8em;
-            font-weight: bold;
-            text-align: center;
-            line-height: 57px ;
             transition-duration: 3s;
             transition-property: all;
         }
@@ -55,7 +50,7 @@
             transform: translate(400px, 200px) rotate(1080deg);
         }
         .delay:hover #j2 {
-            transform: translate(300px, 400px) rotate(1080deg);
+            transform: translate(300px, 400px) rotate(760deg);
         }
         .delay:hover #j3 {
             transform: translate(400px, -200px) rotate(1080deg);
@@ -64,15 +59,11 @@
             transform: translate(40px, -400px) rotate(1080deg);
         }
     </style>
-    <script src="js/jquery-1.11.1.min.js"></script>
-    <!-- jquery 라이브러리  -->
-    <script>
-    
-    </script>
 </head>
 <body>
     <h1>빙글빙글 진아</h1>
-    <h2>사진에 마우스를 올려보거나 핸드폰으로 누르고있으삼</h2>
+    <h2>컴퓨터면 사진에 마우스 올렷다가 내렷다가 해보삼</h2>
+    <h2>핸드폰으면 사진 눌럿다가 다른데 눌렀다가 <br> 반복해보삼</h2>
     <p>==================================</p>
     <div class="delay">
         <div class="ani" id="j1">
